--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background dark text-foreground;
+    @apply bg-background text-foreground;
   }
 }
